unpackaged/main/default/objects/Health_Form__c/Health_Form__c.object-meta.xml
<CustomObject>
    <label>Health Form</label>
    <nameField>
        <label>Health Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Health Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>