unpackaged/main/default/objects/Health_Form__c/fields/Additional_Information_Mental_Health__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Mental_Health__c</fullName>
    <label>Additional Information (Mental Health)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>