unpackaged/main/default/objects/Health_Form__c/fields/Allergy_1_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Allergy_1_Treatment__c</fullName>
    <label>Allergy 1 Treatment</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>