unpackaged/main/default/objects/Health_Form__c/fields/Allergy_2_Description__c.field-meta.xml
<CustomField>
    <fullName>Allergy_2_Description__c</fullName>
    <label>Allergy 2 Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>