unpackaged/main/default/objects/Health_Form__c/fields/Allergy_3_Severity_of_Reaction__c.field-meta.xml
<CustomField>
    <fullName>Allergy_3_Severity_of_Reaction__c</fullName>
    <label>Allergy 3 Severity of Reaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mild</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High (life threatening)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>