unpackaged/main/default/objects/Health_Form__c/fields/Any_Additional_Allergies__c.field-meta.xml
<CustomField>
    <fullName>Any_Additional_Allergies__c</fullName>
    <label>Any Additional Allergies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>