unpackaged/main/default/objects/Health_Form__c/fields/Continue_Receiving_Services__c.field-meta.xml
<CustomField>
    <fullName>Continue_Receiving_Services__c</fullName>
    <label>Continue Receiving Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>