unpackaged/main/default/objects/Health_Form__c/fields/Country_of_Residence_2__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Residence_2__c</fullName>
    <label>Country of Residence 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>