unpackaged/main/default/objects/Health_Form__c/fields/COVID_19_Vaccinated__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_Vaccinated__c</fullName>
    <label>COVID 19 Vaccinated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I&#39;m scheduled for a vaccination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>