unpackaged/main/default/objects/Health_Form__c/fields/COVID_Details__c.field-meta.xml
<CustomField>
    <fullName>COVID_Details__c</fullName>
    <label>COVID Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>