unpackaged/main/default/objects/Health_Form__c/fields/Currently_Receiving_Services__c.field-meta.xml
<CustomField>
    <fullName>Currently_Receiving_Services__c</fullName>
    <label>Currently Receiving Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>