unpackaged/main/default/objects/Health_Form__c/fields/Date_of_COVID_Vaccination__c.field-meta.xml
<CustomField>
    <fullName>Date_of_COVID_Vaccination__c</fullName>
    <label>Date of COVID Vaccination</label>
    <type>Date</type>
</CustomField>