unpackaged/main/default/objects/Health_Form__c/fields/Emergency_Contact_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_2_First_Name__c</fullName>
    <label>Emergency Contact 2 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>