unpackaged/main/default/objects/Health_Form__c/fields/Emergency_Contact_3_Email__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_3_Email__c</fullName>
    <label>Emergency Contact 3 Email</label>
    <type>Email</type>
</CustomField>