unpackaged/main/default/objects/Health_Form__c/fields/Emergency_Contact_3_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_3_Phone__c</fullName>
    <label>Emergency Contact 3 Phone</label>
    <type>Phone</type>
</CustomField>