unpackaged/main/default/objects/Health_Form__c/fields/Gender_and_Preferred_Pronouns_Info__c.field-meta.xml
<CustomField>
    <fullName>Gender_and_Preferred_Pronouns_Info__c</fullName>
    <label>Gender and Preferred Pronouns Info</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>