unpackaged/main/default/objects/Health_Form__c/fields/Has_Medical_Dietary_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Has_Medical_Dietary_Requirements__c</fullName>
    <label>Has Medical Dietary Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>