unpackaged/main/default/objects/Health_Form__c/fields/Has_or_Had_COVID_19__c.field-meta.xml
<CustomField>
    <fullName>Has_or_Had_COVID_19__c</fullName>
    <label>Has or Had COVID 19</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Currently Infected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>