unpackaged/main/default/objects/Health_Form__c/fields/Has_Personal_or_Religious_Dietary_Rqmts__c.field-meta.xml
<CustomField>
    <fullName>Has_Personal_or_Religious_Dietary_Rqmts__c</fullName>
    <label>Has Personal or Religious Dietary Rqmts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>