unpackaged/main/default/objects/Health_Form__c/fields/Has_Student_Been_Hospitalized__c.field-meta.xml
<CustomField>
    <fullName>Has_Student_Been_Hospitalized__c</fullName>
    <label>Has Student Been Hospitalized</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>