unpackaged/main/default/objects/Health_Form__c/fields/Identify_As_Another_Gender__c.field-meta.xml
<CustomField>
    <fullName>Identify_As_Another_Gender__c</fullName>
    <label>Identify As Another Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>