unpackaged/main/default/objects/Health_Form__c/fields/Known_Allergies__c.field-meta.xml
<CustomField>
    <fullName>Known_Allergies__c</fullName>
    <label>Known Allergies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>