unpackaged/main/default/objects/Health_Form__c/fields/Limitations_to_Participate_in_Activities__c.field-meta.xml
<CustomField>
    <fullName>Limitations_to_Participate_in_Activities__c</fullName>
    <label>Limitations to Participate in Activities</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>