unpackaged/main/default/objects/Health_Form__c/fields/Medication_1_Dosage_and_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Medication_1_Dosage_and_Frequency__c</fullName>
    <label>Medication 1 Dosage and Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>