unpackaged/main/default/objects/Health_Form__c/fields/Medication_1_Reason__c.field-meta.xml
<CustomField>
    <fullName>Medication_1_Reason__c</fullName>
    <label>Medication 1 Reason</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>