unpackaged/main/default/objects/Health_Form__c/fields/Medication_1_Side_Effects__c.field-meta.xml
<CustomField>
    <fullName>Medication_1_Side_Effects__c</fullName>
    <label>Medication 1 Side Effects</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>