unpackaged/main/default/objects/Health_Form__c/fields/Medication_2_Effects_of_Missed_Dose__c.field-meta.xml
<CustomField>
    <fullName>Medication_2_Effects_of_Missed_Dose__c</fullName>
    <label>Medication 2 Effects of Missed Dose</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>