unpackaged/main/default/objects/Health_Form__c/fields/Medication_2_Reason__c.field-meta.xml
<CustomField>
    <fullName>Medication_2_Reason__c</fullName>
    <label>Medication 2 Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>