unpackaged/main/default/objects/Health_Form__c/fields/Medication_2_Type__c.field-meta.xml
<CustomField>
    <fullName>Medication_2_Type__c</fullName>
    <label>Medication 2 Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>