unpackaged/main/default/objects/Health_Form__c/fields/Medication_3_Effects_of_Missed_Dose__c.field-meta.xml
<CustomField>
    <fullName>Medication_3_Effects_of_Missed_Dose__c</fullName>
    <label>Medication 3 Effects of Missed Dose</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>