unpackaged/main/default/objects/Health_Form__c/fields/Medication_3_Side_Effects__c.field-meta.xml
<CustomField>
    <fullName>Medication_3_Side_Effects__c</fullName>
    <label>Medication 3 Side Effects</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>