unpackaged/main/default/objects/Health_Form__c/fields/Parent_Signature_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Signature_First_Name__c</fullName>
    <label>Parent Signature First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>