unpackaged/main/default/objects/Health_Form__c/fields/Plans_to_Stop_Taking_Medication__c.field-meta.xml
<CustomField>
    <fullName>Plans_to_Stop_Taking_Medication__c</fullName>
    <label>Plans to Stop Taking Medication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>