unpackaged/main/default/objects/Health_Form__c/fields/Please_Explain_Medical_Dietary__c.field-meta.xml
<CustomField>
    <fullName>Please_Explain_Medical_Dietary__c</fullName>
    <label>Please Explain (Medical Dietary)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>