unpackaged/main/default/objects/Health_Form__c/fields/Please_Explain_Mental_Health_Prof__c.field-meta.xml
<CustomField>
    <fullName>Please_Explain_Mental_Health_Prof__c</fullName>
    <label>Please Explain (Mental Health Prof)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>