unpackaged/main/default/objects/Health_Form__c/fields/Please_Explain_Pers_or_Relig_Dietary__c.field-meta.xml
<CustomField>
    <fullName>Please_Explain_Pers_or_Relig_Dietary__c</fullName>
    <label>Please Explain (Pers  or Relig Dietary)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>