unpackaged/main/default/objects/Health_Form__c/fields/Please_Explain_Receiving_Services__c.field-meta.xml
<CustomField>
    <fullName>Please_Explain_Receiving_Services__c</fullName>
    <label>Please Explain (Receiving Services)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>