unpackaged/main/default/objects/Health_Form__c/fields/Please_Explain_Swim_Moving_Water__c.field-meta.xml
<CustomField>
    <fullName>Please_Explain_Swim_Moving_Water__c</fullName>
    <label>Please Explain (Swim Moving Water)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>