unpackaged/main/default/objects/Health_Form__c/fields/Please_specify_diagnosis_Mental_Health__c.field-meta.xml
<CustomField>
    <fullName>Please_specify_diagnosis_Mental_Health__c</fullName>
    <label>Please specify diagnosis (Mental Health)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>