unpackaged/main/default/objects/Health_Form__c/fields/Prescribed_Epinephrine__c.field-meta.xml
<CustomField>
    <fullName>Prescribed_Epinephrine__c</fullName>
    <label>Prescribed Epinephrine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>