unpackaged/main/default/objects/Health_Form__c/fields/Provide_Second_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Provide_Second_Emergency_Contact__c</fullName>
    <label>Provide Second Emergency Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>