unpackaged/main/default/objects/Health_Form__c/fields/Receiving_Treatment_for_Medical_Cond__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Treatment_for_Medical_Cond__c</fullName>
    <label>Receiving  Treatment for (Medical Cond)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Respiratory issues (such as asthma)</fullName>
            </value>
            <value>
                <fullName>Diabetes (Type 1 or 2)</fullName>
            </value>
            <value>
                <fullName>Neurological problems (such as seizures or epilepsy)</fullName>
            </value>
            <value>
                <fullName>Chronic or reoccurring illness</fullName>
            </value>
            <value>
                <fullName>Head injury or concussion (within the past 12 months)</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>