unpackaged/main/default/objects/Health_Form__c/fields/Receiving_Treatment_for_Mental_Health__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Treatment_for_Mental_Health__c</fullName>
    <label>Receiving  Treatment for (Mental Health)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eating disorder or disordered eating</fullName>
            </value>
            <value>
                <fullName>Suicidal or destructive thoughts</fullName>
            </value>
            <value>
                <fullName>Self-harm</fullName>
            </value>
            <value>
                <fullName>Substance abuse or addiction</fullName>
            </value>
            <value>
                <fullName>Severe anxiety or depression</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
            </value>
            <value>
                <fullName>Depression</fullName>
            </value>
            <value>
                <fullName>Bipolar disorder</fullName>
            </value>
            <value>
                <fullName>PTSD</fullName>
            </value>
            <value>
                <fullName>Alcohol abuse or addiction</fullName>
            </value>
            <value>
                <fullName>Other substance abuse or addiction</fullName>
            </value>
            <value>
                <fullName>Suicidal ideation or attempt</fullName>
            </value>
            <value>
                <fullName>ADHD</fullName>
            </value>
            <value>
                <fullName>Autism Spectrum</fullName>
            </value>
            <value>
                <fullName>Other (please specify below)</fullName>
            </value>
            <value>
                <fullName>Panic attacks</fullName>
            </value>
            <value>
                <fullName>General emotional wellness</fullName>
            </value>
            <value>
                <fullName>Specific life event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>