unpackaged/main/default/objects/Health_Form__c/fields/Relationship_to_Student_2__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Student_2__c</fullName>
    <label>Relationship to Student 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>