unpackaged/main/default/objects/Health_Form__c/fields/Relationship_to_Student__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Student__c</fullName>
    <label>Relationship to Student</label>
    <length>255</length>
    <type>Text</type>
</CustomField>