unpackaged/main/default/objects/Health_Form__c/fields/Request_Formal_Accommodations__c.field-meta.xml
<CustomField>
    <fullName>Request_Formal_Accommodations__c</fullName>
    <label>Request Formal Accommodations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>