unpackaged/main/default/objects/Health_Form__c/fields/Seen_Mental_Health_Professional__c.field-meta.xml
<CustomField>
    <fullName>Seen_Mental_Health_Professional__c</fullName>
    <label>Seen Mental Health Professional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>