unpackaged/main/default/objects/Health_Form__c/fields/State_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>State_of_Residence__c</fullName>
    <label>State of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Province_Region</valueSetName>
    </valueSet>
</CustomField>