unpackaged/main/default/objects/Health_Form__c/fields/Swimming_Ability_Calm_Water__c.field-meta.xml
<CustomField>
    <fullName>Swimming_Ability_Calm_Water__c</fullName>
    <label>Swimming Ability Calm Water</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Swimmer</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Competent</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>