unpackaged/main/default/objects/Health_Form__c/fields/Taking_Additional_Medications__c.field-meta.xml
<CustomField>
    <fullName>Taking_Additional_Medications__c</fullName>
    <label>Taking Additional Medications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>