unpackaged/main/default/objects/Health_Form__c/fields/Taking_Any_Medication__c.field-meta.xml
<CustomField>
    <fullName>Taking_Any_Medication__c</fullName>
    <label>Taking Any Medication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>