unpackaged/main/default/objects/Health_Form__c/fields/Why_Stopping_Medication__c.field-meta.xml
<CustomField>
    <fullName>Why_Stopping_Medication__c</fullName>
    <label>Why Stopping Medication</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>