unpackaged/main/default/objects/Health_Form__c/recordTypes/Health_History_Form.recordType-meta.xml
<RecordType>
    <fullName>Health_History_Form</fullName>
    <active>true</active>
    <label>Health History Form</label>
</RecordType>